src/test/compile-fail/spawn-non-nil-fn.rs
// error-pattern: mismatched types

use std;

fn main() { task::spawn(fn~() -> int { 10 }); }
